// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RandomizerView animation (CSS transform + rAF) > spins via CSS transform and stops sequentially with configurable durations (snapshot mid/end) 1`] = `
"<section data-v-6ef6c678="" class="p-4 container">
  <div data-v-6ef6c678="" class="card" role="dialog" aria-modal="true" aria-labelledby="shuffle-title">
    <header data-v-6ef6c678="" style="display: flex; align-items: center; justify-content: space-between; gap: 8px; margin-bottom: 6px;">
      <h2 data-v-6ef6c678="" id="shuffle-title" style="margin: 0px; font-weight: 700;">Zufallsauswahl</h2><button data-v-6ef6c678="" class="btn" type="button" aria-label="Schließen">✕</button>
    </header><!-- Loading / Error -->
    <!-- Content -->
    <div data-v-6ef6c678="">
      <div data-v-6ef6c678="" class="row" style="align-items: center; justify-content: center; margin: 10px 0px; gap: 10px;">
        <!-- Reel: Category -->
        <div data-v-6ef6c678="" class="card" style="min-width: 220px; text-align: center;">
          <div data-v-6ef6c678="" class="label">Kategorie</div>
          <div data-v-6ef6c678="" class="reel-viewport" aria-live="off" role="status">
            <div data-v-6ef6c678="" class="reel-track" style="transform: translateY(-0.5409150879999651px);">
              <div data-v-6ef6c678="" class="reel-item">Chipping Green</div>
              <div data-v-6ef6c678="" class="reel-item">Driving Range</div>
            </div>
          </div>
        </div><!-- Reel: Drill -->
        <div data-v-6ef6c678="" class="card" style="min-width: 260px; text-align: center;">
          <div data-v-6ef6c678="" class="label">Drill</div>
          <div data-v-6ef6c678="" class="reel-viewport" aria-live="polite" role="status">
            <div data-v-6ef6c678="" class="reel-track" style="transform: translateY(0px);">
              <div data-v-6ef6c678="" class="reel-item">Carry Zone</div>
            </div>
          </div>
        </div><!-- Reel: Target type (optional) -->
        <div data-v-6ef6c678="" class="card" style="min-width: 200px; text-align: center;">
          <div data-v-6ef6c678="" class="label">Zieltyp</div>
          <div data-v-6ef6c678="" class="reel-viewport" aria-live="polite" role="status">
            <div data-v-6ef6c678="" class="reel-track" style="transform: translateY(0px);">
              <div data-v-6ef6c678="" class="reel-item">—</div>
            </div>
          </div>
        </div>
      </div>
      <div data-v-6ef6c678="" class="row" style="justify-content: center; margin-top: 10px; align-items: center; gap: 16px;"><label data-v-6ef6c678="" class="chip" style="display: inline-flex; align-items: center; gap: 6px; cursor: pointer;"><input data-v-6ef6c678="" type="checkbox" disabled="" data-testid="bias-favorites"> Favoriten bevorzugen </label><button data-v-6ef6c678="" class="btn btn-primary" type="button" data-testid="shuffle-start" disabled="">Start</button><button data-v-6ef6c678="" class="btn" type="button" data-testid="shuffle-cancel">Abbrechen</button></div>
    </div>
  </div>
</section>"
`;

exports[`RandomizerView animation (CSS transform + rAF) > spins via CSS transform and stops sequentially with configurable durations (snapshot mid/end) 2`] = `
"<section data-v-6ef6c678="" class="p-4 container">
  <div data-v-6ef6c678="" class="card" role="dialog" aria-modal="true" aria-labelledby="shuffle-title">
    <header data-v-6ef6c678="" style="display: flex; align-items: center; justify-content: space-between; gap: 8px; margin-bottom: 6px;">
      <h2 data-v-6ef6c678="" id="shuffle-title" style="margin: 0px; font-weight: 700;">Zufallsauswahl</h2><button data-v-6ef6c678="" class="btn" type="button" aria-label="Schließen">✕</button>
    </header><!-- Loading / Error -->
    <!-- Content -->
    <div data-v-6ef6c678="">
      <div data-v-6ef6c678="" class="row" style="align-items: center; justify-content: center; margin: 10px 0px; gap: 10px;">
        <!-- Reel: Category -->
        <div data-v-6ef6c678="" class="card" style="min-width: 220px; text-align: center;">
          <div data-v-6ef6c678="" class="label">Kategorie</div>
          <div data-v-6ef6c678="" class="reel-viewport" aria-live="polite" role="status">
            <div data-v-6ef6c678="" class="reel-track" style="transform: translateY(-7.271804511999989px);">
              <div data-v-6ef6c678="" class="reel-item">Chipping Green</div>
              <div data-v-6ef6c678="" class="reel-item">Driving Range</div>
            </div>
          </div>
        </div><!-- Reel: Drill -->
        <div data-v-6ef6c678="" class="card" style="min-width: 260px; text-align: center;">
          <div data-v-6ef6c678="" class="label">Drill</div>
          <div data-v-6ef6c678="" class="reel-viewport" aria-live="polite" role="status">
            <div data-v-6ef6c678="" class="reel-track" style="transform: translateY(-0.9661639000000832px);">
              <div data-v-6ef6c678="" class="reel-item">Carry Zone</div>
            </div>
          </div>
        </div><!-- Reel: Target type (optional) -->
        <div data-v-6ef6c678="" class="card" style="min-width: 200px; text-align: center;">
          <div data-v-6ef6c678="" class="label">Zieltyp</div>
          <div data-v-6ef6c678="" class="reel-viewport" aria-live="polite" role="status">
            <div data-v-6ef6c678="" class="reel-track" style="transform: translateY(-0.590315499999997px);">
              <div data-v-6ef6c678="" class="reel-item">streak</div>
            </div>
          </div>
        </div>
      </div>
      <div data-v-6ef6c678="" class="row" style="justify-content: center; margin-top: 10px; align-items: center; gap: 16px;"><label data-v-6ef6c678="" class="chip" style="display: inline-flex; align-items: center; gap: 6px; cursor: pointer;"><input data-v-6ef6c678="" type="checkbox" disabled="" data-testid="bias-favorites"> Favoriten bevorzugen </label><button data-v-6ef6c678="" class="btn btn-primary" type="button" data-testid="shuffle-start">Start</button><button data-v-6ef6c678="" class="btn" type="button" data-testid="shuffle-cancel" disabled="">Abbrechen</button></div>
    </div>
  </div>
</section>"
`;
